--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vaadin/vaadin-upload": "^4.2.1",
     "axios": "^0.18.0",
     "moment": "^2.24.0",
     "register-service-worker": "^1.5.2",
     "vue": "^2.5.22",
     "vue-router": "^3.0.2",
     "vuetify": "^1.3.0",
-    "vuex": "^3.1.0"
+    "vuex": "^3.1.0",
+    "webpack-war-plugin": "^1.0.0-beta.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.4.0",
