--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vaadin/vaadin-upload": "^4.2.1",
     "axios": "^0.18.0",
     "moment": "^2.24.0",
     "register-service-worker": "^1.5.2",
