ultimated pwa configurations

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -23,7 +23,7 @@
       "type": "image/png"
     }
   ],
-  "start_url": "./index.html",
+  "start_url": "index.html",
   "display": "standalone",
   "theme_color": "#009873",
 	"background_color": "#009873"
