--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   },
   "dependencies": {
     "@vaadin/vaadin-upload": "^4.2.1",
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
     "moment": "^2.24.0",
     "register-service-worker": "^1.5.2",
-    "vue": "^2.5.22",
+    "vue": "^2.6.10",
     "vue-router": "^3.0.2",
-    "vuetify": "^1.3.0",
+    "vuetify": "^2.0.18",
     "vuex": "^3.1.0",
     "webpack-war-plugin": "^1.0.0-beta.3"
   },
@@ -25,12 +25,17 @@
     "@vue/cli-plugin-pwa": "^3.4.0",
     "@vue/cli-service": "^3.4.0",
     "babel-eslint": "^10.0.1",
+    "deepmerge": "^4.0.0",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
+    "eslint-plugin-vuetify": "^1.0.0-beta.3",
+    "fibers": "^4.0.1",
+    "sass": "^1.22.12",
+    "sass-loader": "^7.3.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
-    "vue-cli-plugin-vuetify": "^0.4.6",
-    "vue-template-compiler": "^2.5.21",
-    "vuetify-loader": "^1.0.5"
+    "vue-cli-plugin-vuetify": "^0.6.3",
+    "vue-template-compiler": "^2.6.10",
+    "vuetify-loader": "^1.3.0"
   }
 }
