--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.18.1",
     "lodash": "^4.17.15",
     "lodash.template": "^4.5.0",
+    "mime-types": "^2.1.27",
     "moment": "^2.24.0",
     "register-service-worker": "^1.5.2",
     "vue": "^2.5.22",
